--- a/3_container_python/docker-compose.yml
+++ b/3_container_python/docker-compose.yml
@@ -2,17 +2,11 @@ version: "3"
 services:
   web:
     # replace username/repo:tag with your name and image details
-    image: username/repo:tag
-    deploy:
-      replicas: 5
-      resources:
-        limits:
-          cpus: "0.1"
-          memory: 50M
-      restart_policy:
-        condition: on-failure
+    image: ciuster/hellodocker:1.0
+    #environment:
+    #  PAROLADORDINE: "il fosso saltalo te"
     ports:
-      - "80:80"
+      - "4000:80"
     networks:
       - webnet
 networks:
