--- a/3_container_python/Dockerfile
+++ b/3_container_python/Dockerfile
@@ -1,20 +1,20 @@
 # Use an official Python runtime as a parent image
-FROM python:2.7-slim
+FROM python:3.7-slim-buster
 
 # Set the working directory to /app
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-ADD . /app
+# Copy only requirement file in order to optmizize build process
+COPY requirements.txt requirements.txt
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip3 install -r requirements.txt
 
-# Make port 80 available to the world outside this container
-EXPOSE 80
+# Copy the current directory contents into the container at /app
+COPY . .
 
 # Define environment variable
-ENV NAME World_Becchi
+ENV NAME World_Becchi_ok
 
 # Run app.py when the container launches
-CMD ["python", "app.py"]
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
