--- a/3_container_python/docker-compose.yml
+++ b/3_container_python/docker-compose.yml
@@ -1,13 +1,10 @@
-version: "3"
+version: "3.1"
 services:
   web:
     # replace username/repo:tag with your name and image details
-    image: ciuster/hellodocker:1.0
-    #environment:
-    #  PAROLADORDINE: "il fosso saltalo te"
+    image: python-docker
     ports:
-      - "4000:80"
-    networks:
-      - webnet
-networks:
-  webnet:
+      - "5000:5000"
+    #env_file:
+    #  - ./.env
+
