--- a/5_stack_django/Dockerfile
+++ b/5_stack_django/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:2
-ENV PYTHONUNBUFFERED 1
+FROM python:3
+ENV PYTHONUNBUFFERED=1
 WORKDIR /code
-ADD requirements.txt /code/
+COPY requirements.txt /code/
 RUN pip install -r requirements.txt
-ADD . /code/
+COPY . /code/
