--- a/5_stack_django/docker-compose.yml
+++ b/5_stack_django/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.1'
 
 services:
+  db:
+    image: postgres
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -10,15 +18,6 @@ services:
       - "8000:8000"
     depends_on:
       - db
-
-  db:
-    image: mysql
-    restart: always
-    environment:
-      MYSQL_DATABASE: django
-      MYSQL_ROOT_PASSWORD: root
-    volumes:
-      - ./mysql-data:/var/lib/mysql
 
   adminer:
     image: adminer
