--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ target/
 5_stack_django_test/*
 4_stack_lamp/data/mysql/*
 
-5_stack_django/composeexample/*
+5_stack_django/composeexample
+5_stack_django/art
 5_stack_django/data
 5_stack_django/manage.py
