aggiornato readme e docker-compose stack django

--- a/5_stack_django/docker-compose.yml
+++ b/5_stack_django/docker-compose.yml
@@ -18,6 +18,11 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    environment:
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+
 
   adminer:
     image: adminer
